FIX #1396: Align more block

--- a/rockfield/style-rtl.css
+++ b/rockfield/style-rtl.css
@@ -2723,7 +2723,7 @@ table th,
 }
 
 .entry-content .more-link {
-	display: inline;
+	display: block;
 	color: inherit;
 }
 
