--- a/rockfield/style.css
+++ b/rockfield/style.css
@@ -2740,7 +2740,7 @@ table th,
 }
 
 .entry-content .more-link {
-	display: inline;
+	display: block;
 	color: inherit;
 }
 
